--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ rvm:
   - 2.3.6
   - 2.4.3
   - 2.5.0
-before_install: gem install bundler -v 1.16.0
+before_script:
+  - sudo apt-get upgrade -qq
+  - sudo apt-get install -qq mpg123
